plugins {
    id 'java'
    id 'application'
}

group = 'dev.sorted.mcphub'
version = '0.1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.0'
    implementation 'org.xerial:sqlite-jdbc:3.45.3.0'
    implementation 'org.slf4j:slf4j-api:2.0.12'
    runtimeOnly 'ch.qos.logback:logback-classic:1.5.6'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
    mainClass = 'dev.sorted.mcphub.Main'
}

test {
    useJUnitPlatform()
}

// Fat-JAR (REQ-9.4.6)
jar {
    archiveBaseName = 'mcphub-core'
    manifest {
        attributes(
            'Main-Class': 'dev.sorted.mcphub.Main',
            'Implementation-Version': version
        )
    }
    from {
        configurations.runtimeClasspath.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
